# cc-delegator

./: .gitignore  AGENTS.md  BACKEND_CONFIG.md  CLAUDE.md  README.md  cache_metrics.py  cache_store.py  claude_memory_bridge.py  cli.py  context_compressor.py  expert_memory.py  glm_mcp_server.py  job_manager.py  manage.sh  persona_loader.py  prompt_enhancer.py  prompt_guard.py  providers.py  pyproject.toml  requirements-dev.txt  server.py  test_background_real.py  tool_handlers.py  tool_registry.py
.claude-plugin/: plugin.json
commands/: setup.md  workflow.md
prompts/: code-reviewer.md  truthfulness_policy.md
prompts/personas/: architect.md  plan_reviewer.md  scope_analyst.md  security_analyst.md
rules/: glm-delegator.md
tests/: conftest.py  test_cache_metrics.py  test_cache_store.py  test_claude_memory_bridge.py  test_context_compressor.py  test_expert_memory.py  test_job_manager.py  test_mcp_server.py  test_persona_loader.py  test_prompt_enhancer.py  test_prompt_guard.py  test_providers.py  test_tool_handlers.py  test_tool_registry.py
