[project]
name = "glm-delegator"
version = "3.0.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.coverage.run]
source = ["providers", "glm_mcp_server", "server", "cli", "persona_loader", "tool_registry", "tool_handlers"]
omit = ["tests/*", ".venv/*", "test_background_real.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
